// The CompilerGym service interface description.
//
// Copyright (c) Facebook, Inc. and its affiliates.
//
// This source code is licensed under the MIT license found in the
// LICENSE file in the root directory of this source tree.

syntax = "proto3";

package compiler_gym;

option cc_enable_arenas = true;
option go_package = "compiler_gympb";
option java_multiple_files = true;
option java_outer_classname = "CompilerGymServiceProto";
option java_package = "com.compiler_gym";

// The CompilerGymService is the interface that exposes the incremental
// optimization of a program as an interactive environment.
service CompilerGymService {
  // Request version strings from the service.
  rpc GetVersion(GetVersionRequest) returns (GetVersionReply);
  // Request the action and observation spaces that this service supports. The
  // service responds with an initial action space, and a list of available
  // observation and reward spaces.
  rpc GetSpaces(GetSpacesRequest) returns (GetSpacesReply);
  // Start a new CompilerGym service session. This allocates a new session on
  // the service and returns a session ID. To terminate the session, call
  // EndSession() once done. Raises grpc::StatusCode::NOT_FOUND if the requested
  // benchmark URI is not found.
  rpc StartSession(StartSessionRequest) returns (StartSessionReply);
  // Fork a session. This creates a new session in exactly the same state. The
  // new session must be terminated with EndSession() once done. This returns
  // an error if the session to fork does not exist.
  rpc ForkSession(ForkSessionRequest) returns (ForkSessionReply);
  // End a CompilerGym service session. If the requested session does not exist,
  // this returns an error.
  rpc EndSession(EndSessionRequest) returns (EndSessionReply);
  // Apply a list of optimization decisions and compute a list of observations
  // for a session. Optimization decisions are selected from the last
  // ActionSpace returned by a call to GetSpaces() or Step(). Valid observations
  // are queried using GetSpaces(). This returns an error if the requested
  // session does not exist.
  rpc Step(StepRequest) returns (StepReply);
  // Register a new benchmark.
  rpc AddBenchmark(AddBenchmarkRequest) returns (AddBenchmarkReply);
  // Transmit <key, value> parameters to a session. Each parameter generates a
  // string response. It us up to the client/service to agree on a common schema
  // for encoding and decoding these parameters. An unknown key/value returns
  // grpc::StatusCode::INVALID_ARGUMENT.
  rpc SendSessionParameter(SendSessionParameterRequest) returns (SendSessionParameterReply);
}

// A GetVersion() request.
message GetVersionRequest {}

// The GetVersion() response.
message GetVersionReply {
  // The version string for this service.
  string service_version = 1;
  // The version string for the underlying compiler.
  string compiler_version = 2;
}

// A StartSession() request.
message StartSessionRequest {
  reserved 1;
  // The benchmark to use.
  Benchmark benchmark = 4;
  // An index into the GetSpacesReply.action_space_list selecting the action
  // space that is to be used for this session. Once set, the action space
  // cannot be changed for the duration of the session.
  int32 action_space = 2;
  // A list of indices into the GetSpacesReply.observation_space_list
  repeated int32 observation_space = 3;
}

// A StartSession() reply.
message StartSessionReply {
  reserved 2;
  // The ID that has been assigned to the session. The client must use this ID
  // in all subsequent interactions with the service for this session.
  int64 session_id = 1;
  // A new action space. This is set only if, after initializing the session,
  // the action space has changed from the default action space returned by
  // GetSpaces(). If set, the environment should discard the previous action
  // space and replace it with this one. Else, the action space remains
  // unchanged.
  ActionSpace new_action_space = 3;
  // Observed states after completing the action.
  repeated Observation observation = 4;
}

// A Step() request.
message StepRequest {
  // The ID of the session.
  int64 session_id = 1;
  // A list of actions to execute, in order.
  repeated Action action = 2;
  // A list of indices into the GetSpacesReply.observation_space_list
  repeated int32 observation_space = 3;
}

// A Step() reply.
message StepReply {
  // Indicates that the session has ended. This could be because there are no
  // further actions that can be made, or because the action has led to an
  // invalid state. Once this field has been set, you should make no further
  // calls to step(). However, you mays still request reward and new
  // observations.
  bool end_of_session = 1;
  // A service may set this field to true if the action is known not to have
  // any effect. This allows an agent to assume that observations or rewards
  // computed before this action remain valid, providing that they are
  // deterministic.
  bool action_had_no_effect = 2;
  // A new action space. This field is set if, as a result of running the
  // requested action, the action space has changed. Else, the action space
  // remains unchanged.
  ActionSpace new_action_space = 3;
  // Observed states after completing the action.
  repeated Observation observation = 4;
}

// A description of an action space.
//
// \warning This message format is likely to change. This currently only
//     supports flat action spaces of categorical values. In the future we will
//     want to replace this with a more extensible representation that supports
//     parameterized actions, and actions of different types (e.g. optimization
//     passes vs optimization contexts).
message ActionSpace {
  // The name of the action space.
  string name = 1;
  // A list of discrete action names.
  repeated string action = 2;
}

// An action.
message Action {
  // An index into the ActionSpace.action list.
  int32 action = 1;
}

// An observations from a compiler.
message Observation {
  // A point in an ObservationSpace is _either_ a scalar or vector of integers
  // or real values, a string, or an opaque byte array.
  oneof value {
    Int64List int64_list = 1;
    DoubleList double_list = 2;
    string string_value = 3;
    bytes binary_value = 4;
    int64 scalar_int64 = 5;
    double scalar_double = 6;
  }
}

// A list of 64 bit integers.
message Int64List {
  repeated int64 value = 1;
}

// A list of doubles.
message DoubleList {
  repeated double value = 1;
}

// The [min, max] range of a scalar.
message ScalarRange {
  // The minimum value (inclusive). If not set, the value is -inf.
  ScalarLimit min = 1;
  // The maximum value (inclusive). If not set, the value is +inf.
  ScalarLimit max = 2;
}

// Representation of the upper or lower limit of a scalar.
message ScalarLimit {
  double value = 1;
}

// A list of scalar ranges.
message ScalarRangeList {
  repeated ScalarRange range = 1;
}

// The description of a space of observations.
message ObservationSpace {
  // The name of the observation space.
  string name = 1;
  // The shape of the observation space. All Observations
  // from an ObservationSpace have the same shape.
  oneof shape {
    ScalarRangeList int64_range_list = 2;
    ScalarRangeList double_range_list = 3;
    // For character and byte arrays, the _size_range field describes the range of
    // possible sizes, e.g. a string_size_range of [10, +inf] means that
    // observations are strings of at least 10 characters in length.
    ScalarRange string_size_range = 4;
    ScalarRange binary_size_range = 5;
    // For scalar values, the _range field describes the bounds of the scalar
    // value.
    ScalarRange scalar_int64_range = 10;
    ScalarRange scalar_double_range = 11;
  }
  // An optional string describing an opaque data format, e.g. a data structure
  // that is serialized to a string/binary array for transmission back to the
  // client. It is up to the client and service to agree on how to decode
  // observations using this value. For example, an opaque_data_format of
  // "string_json" could be used to indicate that the observation is a
  // string-serialized JSON value.
  string opaque_data_format = 6;
  // Whether the observation space is deterministic.
  bool deterministic = 7;
  // Whether the observations depend on the service execution environment.
  bool platform_dependent = 8;
  // A default observation. This value should be used by the client in lieu
  // of a true observation if the compiler service terminates abruptly, such as
  // a crash while applying an action.
  Observation default_value = 9;
}

// A Fork() request.
message ForkSessionRequest {
  // The ID of the session to fork.
  int64 session_id = 1;
}

// A Fork() reply.
message ForkSessionReply {
  // The ID of the newly created session.
  int64 session_id = 1;
}

// An EndSession() request.
message EndSessionRequest {
  // The ID of the session.
  int64 session_id = 1;
}

// An EndSession() reply.
message EndSessionReply {
  // The number of sessions that the service currently has.
  int32 remaining_sessions = 1;
}

// A GetSpaces() request.
message GetSpacesRequest {}

// A GetSpaces() reply.
message GetSpacesReply {
  // The initial space of actions. Subsequent calls to step() may produce
  // a new action space.
  repeated ActionSpace action_space_list = 1;
  // A list of available observation spaces. A service may support one or more
  // observation spaces.
  repeated ObservationSpace observation_space_list = 2;
}

// Representation of the input to a compiler.
message Benchmark {
  // The name of the benchmark to add. In case of conflict with an existing
  // benchmark, this new benchmark replaces the existing one.
  string uri = 1;
  // The description of the program that is being compiled. It is up to the
  // service to determine how to interpret this file, and it is the
  // responsibility of the client to ensure that it provides the correct format.
  // For example, the service could expect that this file contains serialized
  // IR data, or an input source file.
  File program = 2;
}

// A File message represents a file object.
message File {
  oneof data {
    // The raw data of the file.
    bytes contents = 1;
    // The URI of the file which can be accessed.
    string uri = 2;
  }
}

// An AddBenchmark() request.
message AddBenchmarkRequest {
  repeated Benchmark benchmark = 1;
}

// An AddBenchmark() reply.
message AddBenchmarkReply {}

// An arbitrary string parameter value for a session.
message SessionParameter {
  string key = 1;
  string value = 2;
}

// A SendSessionParameter() request.
message SendSessionParameterRequest {
  // The ID of the session.
  int64 session_id = 1;
  // A list of <key, value> parameters to pass to the session.
  repeated SessionParameter parameter = 2;
}

// A SendSessionParameter() reply.
message SendSessionParameterReply {
  // A list of response messages, one per parameter request.
  repeated string reply = 1;
}
